# flask-vue-todo-application

./: README.md  docker-compose.yml
nginx/: default.conf
tracker_api/: Dockerfile  pyproject.toml
tracker_api/resources/: development.ini
tracker_api/src/: settings.py  wsgi.py
tracker_api/src/cli/: __init__.py  manage.py
tracker_api/src/exceptions/: cli.py
tracker_api/src/models/: __init__.py  item.py  token.py  user.py
tracker_api/src/routes/: __init__.py
tracker_api/src/routes/api/: __init__.py
tracker_api/src/routes/api/v1/: __init__.py  account.py  task.py
tracker_api/src/schemas/: __init__.py  item.py  login.py  user.py
tracker_api/src/utils/: __init__.py
tracker_api/src/utils/decorators/: __init__.py  authenticaiton.py
tracker_api/src/views/: account.py  task.py
tracker_webui/: Dockerfile  README.md  index.html  nuxt.config.js  package-lock.json  package.json  tailwind.config.js
tracker_webui/src/components/: CreateTask.vue  ListTask.vue  Login.vue  Navbar.vue
tracker_webui/src/constants/: apis.ts  index.ts  vue.ts
tracker_webui/src/interfaces/: item.ts  login.ts  user.ts
tracker_webui/src/router/: index.ts
tracker_webui/src/views/: HomeView.vue  TodoView.vue
